<resources>
    <string name="app_name">CalkulatorCNC</string>
    <string name="main_button1">Milling\nCutting</string>
    <string name="main_button2">Turning\nBoring</string>
    <string name="main_button3">Tools</string>
    <string name="main_button4">Fit tables</string>
    <string name="tables">Fit \n tables</string>
    <string name="main_button6">Settings</string>
    <string name="news">News</string>
    <string name="language">Application language:</string>
    <string name="settings_button2">Other apps</string>
    <string name="settings_button3">Rate apps</string>
    <string name="settings_button4">Buy coffe</string>
    <string name="settings_button5">Subscription</string>
    <string name="calc_system">Calculation system</string>
    <string name="error">The application could not be found</string>
    <string name="app_objawienia">Revelations</string>
    <string name="app_rachunek_sumienia">Examination Of Conscience</string>
    <string name="app_niewolnik_maryi">Slave of Mary</string>
    <string name="app_kalkulator_cnc">Calculator CNC</string>
    <string name="app_moj_rozaniec">My Rosary</string>
    <string name="app_kalendarz_liturgiczny">Liturgical Calendar</string>
    <string name="app_droga_krzyzowa">Way of the Cross</string>
    <string name="app_ktoz_jak_bog">Who is like God</string>
    <string name="calculate_txt">Calculation type:</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="i">i</string>
    <string name="VC">VC</string>
    <string name="DC">DC</string>
    <string name="FZ">Fz</string>
    <string name="Z">Z</string>
    <string name="JT">JT</string>
    <string name="AS">AS</string>
    <string name="T">T</string>
    <string name="L">L</string>
    <string name="VF">VF</string>
    <string name="LB">LB</string>
    <string name="D">D</string>
    <string name="AP">AP</string>
    <string name="Fn">Fn</string>
    <string name="KC">KC</string>
    <string name="DM">DM</string>
    <string name="close">CLOSE</string>
    <string name="f_colon">F:</string>
    <string name="s_colon">S:</string>
    <string name="fz_colon">Fz:</string>
    <string name="HD">HD</string>
    <string name="TD">TD</string>
    <string name="PointA">Point A</string>
    <string name="PointB">Point B</string>
    <string name="center_colon">Center: </string>
    <string name="LM">Machining length (LM)</string>
    <string name="tc_colon">Machine time (Tc): </string>
    <string name="q_colon">Productivity (Q): </string>
    <string name="calculateResult">CALCULATION RESULTS</string>
    <string name="premium_required_title">This feature is only available in the full app. Click below to unlock all the calculator\'s features.</string>
    <string name="premium_required_button">BUY ANNUAL SUBSCRIPTION</string>
    <string name="premium_required_cancel">MAYBE LATER</string>
    <string name="premium_required_text">PREMIUM OPTION</string>
    <string name="error2">Please complete all fields with correct data</string>
    <string name="informationtext">INFORMATION</string>
    <string name="F">F</string>
    <string name="RE">RE</string>
    <string name="dm">dm</string>
    <string name="holePitch">Pitch</string>
    <string name="holeName">Table</string>
    <string name="holeMin">Min.</string>
    <string name="holeMax">Max.</string>
    <string name="hole">FV</string>
    <string name="toolsName">Name</string>
    <string name="save">SAVE</string>
    <string name="tools">Tools</string>
    <string name="other">Other</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_notes_available">No totes</string>
    <string name="clipboard_label">CNC Parameters</string>
    <string name="params_copied">Parameters copied!</string>
    <string name="copy_tool_template">Tool: %1$s\nMaterial: %2$s\nS: %3$s rpm\nF: %4$s mm/min</string>
    <string name="s_hint">S (rpm)</string>
    <string name="f_hint">F (mm/min)</string>
    <string name="notes_hint">Add notes (optional)</string>
    <string name="P">P</string>
    <string name="forming_abbr">Form.</string>
    <string name="thread_eg">EG</string>
    <string name="mixed_abbr">Mixed</string>
    <string name="loading">Loading…</string>
    <string name="info_0_m"><![CDATA[<b>Milling Parameters</b><br/><br/><b>VC</b> - Cutting speed [m/min]<br/><b>DC</b> - Tool diameter [mm]<br/><b>FZ</b> - Feed per tooth [mm]<br/><b>Z</b> - Number of teeth (for drill enter 1)]]></string>
    <string name="info_0_inch"><![CDATA[<b>Milling Parameters (Inch)</b><br/><br/><b>VC</b> - Cutting speed [sfm]<br/><b>DC</b> - Tool diameter [inch]<br/><b>FZ</b> - Feed per tooth [inch]<br/><b>Z</b> - Number of teeth (for drill enter 1)]]></string>
    <string name="info_1_m"><![CDATA[<b>Threading (Milling)</b><br/><br/><b>VC</b> - Cutting speed [m/min]<br/><b>DC</b> - Tool diameter [mm]<br/><b>JT</b> - Thread pitch [mm]]]></string>
    <string name="info_1_inch"><![CDATA[<b>Threading (Milling - Inch)</b><br/><br/><b>VC</b> - Cutting speed [sfm]<br/><b>DC</b> - Tool diameter [inch]<br/><b>JT</b> - Thread pitch [inch]]]></string>
    <string name="info_2_m"><![CDATA[<b>Boring / Reaming</b><br/><br/><b>HD</b> - Hole diameter [mm]<br/><b>TD</b> - Tool diameter [mm]<br/><b>F</b> - Feed [mm/min]]]></string>
    <string name="info_2_inch"><![CDATA[<b>Boring / Reaming (Inch)</b><br/><br/><b>HD</b> - Hole diameter [inch]<br/><b>TD</b> - Tool diameter [inch]<br/><b>F</b> - Feed [inch/min]]]></string>
    <string name="info_4_m"><![CDATA[<b>Band Saws (Option 1)</b><br/><br/><b>AS</b> - Unit cutting area [mm²/min]<br/><b>T</b> - Tooth pitch [mm]<br/><b>VC</b> - Cutting speed [m/min]<br/><b>L</b> - Cutting length [mm]]]></string>
    <string name="info_4_inch"><![CDATA[<b>Band Saws (Option 1 - Inch)</b><br/><br/><b>AS</b> - Unit cutting area [in²/min]<br/><b>T</b> - Tooth pitch [inch]<br/><b>VC</b> - Cutting speed [sfm]<br/><b>L</b> - Cutting length [inch]]]></string>
    <string name="info_5_m"><![CDATA[<b>Band Saws (Option 2)</b><br/><br/><b>VF</b> - Feed rate [mm/min]<br/><b>VC</b> - Cutting speed [m/min]<br/><b>Z</b> - Number of teeth<br/><b>LB</b> - Bandsaw length [mm]]]></string>
    <string name="info_5_inch"><![CDATA[<b>Band Saws (Option 2 - Inch)</b><br/><br/><b>VF</b> - Feed rate [in/min]<br/><b>VC</b> - Cutting speed [sfm]<br/><b>Z</b> - Number of teeth<br/><b>LB</b> - Bandsaw length [inch]]]></string>
    <string name="info_6_m"><![CDATA[<b>Circular Saws (Option 1)</b><br/><br/><b>AS</b> - Unit cutting area [mm²/min]<br/><b>VC</b> - Cutting speed [m/min]<br/><b>D</b> - Saw diameter [mm]<br/><b>Z</b> - Number of teeth<br/><b>L</b> - Cutting length [mm]]]></string>
    <string name="info_6_inch"><![CDATA[<b>Circular Saws (Option 1 - Inch)</b><br/><br/><b>AS</b> - Unit cutting area [in²/min]<br/><b>VC</b> - Cutting speed [sfm]<br/><b>D</b> - Saw diameter [inch]<br/><b>Z</b> - Number of teeth<br/><b>L</b> - Cutting length [inch]]]></string>
    <string name="info_7_m"><![CDATA[<b>Circular Saws (Option 2)</b><br/><br/><b>VF</b> - Feed rate [mm/min]<br/><b>VC</b> - Cutting speed [m/min]<br/><b>Z</b> - Number of teeth<br/><b>D</b> - Saw diameter [mm]]]></string>
    <string name="info_7_inch"><![CDATA[<b>Circular Saws (Option 2 - Inch)</b><br/><br/><b>VF</b> - Feed rate [in/min]<br/><b>VC</b> - Cutting speed [sfm]<br/><b>Z</b> - Number of teeth<br/><b>D</b> - Saw diameter [inch]]]></string>
    <string name="info_3_m"><![CDATA[<b>Turning (Basic)</b><br/><br/><b>VC</b> - Cutting speed [m/min]<br/><b>DM</b> - Material diameter [mm]<br/><b>FN</b> - Feed per revolution [mm/rev]]]></string>
    <string name="info_3_inch"><![CDATA[<b>Turning (Basic - Inch)</b><br/><br/><b>VC</b> - Cutting speed [sfm]<br/><b>DM</b> - Material diameter [inch]<br/><b>FN</b> - Feed per revolution [in/rev]]]></string>
    <string name="info_8_m"><![CDATA[
    <b>Cutting Parameters (Turning)</b><br/><br/>
    <b>DM</b> – Workpiece diameter [mm]<br/>
    <b>VC</b> – Cutting speed [m/min]<br/>
    <b>Fn</b> – Feed per revolution [mm/rev]<br/>
    <b>AP</b> – Depth of cut (per side) [mm]<br/>
    <b>KC</b> – Specific cutting force [N/mm²]
]]></string>
    <string name="info_8_inch"><![CDATA[
    <b>Cutting Parameters (Turning - Inch)</b><br/><br/>
    <b>DM</b> – Workpiece diameter [inch]<br/>
    <b>VC</b> – Cutting speed [ft/min]<br/>
    <b>Fn</b> – Feed per revolution [in/rev]<br/>
    <b>AP</b> – Depth of cut (per side) [inch]<br/>
    <b>KC</b> – Specific cutting force [lb/in²]
]]></string>
    <string name="info_9_m"><![CDATA[<b>Boring (Turning)</b><br/><br/><b>VC</b> - Cutting speed [m/min]<br/><b>DM</b> - Material diameter [mm]<br/><b>FN</b> - Feed per revolution [mm/rev]]]></string>
    <string name="info_9_inch"><![CDATA[<b>Boring (Turning - Inch)</b><br/><br/><b>VC</b> - Cutting speed [sfm]<br/><b>DM</b> - Material diameter [inch]<br/><b>FN</b> - Feed per revolution [in/rev]]]></string>
    <string name="info_10_m"><![CDATA[<b>Machine Time (Turning)</b><br/><br/><b>VC</b> - Cutting speed [m/min]<br/><b>DM</b> - Material diameter [mm]<br/><b>FN</b> - Feed per revolution [mm/rev]<br/><b>LM</b> - Cutting path length [mm]]]></string>
    <string name="info_10_inch"><![CDATA[<b>Machine Time (Turning - Inch)</b><br/><br/><b>VC</b> - Cutting speed [sfm]<br/><b>DM</b> - Material diameter [inch]<br/><b>FN</b> - Feed per revolution [in/rev]<br/><b>LM</b> - Cutting path length [inch]]]></string>
    <string name="info_11_m"><![CDATA[<b>Volume Efficiency (Turning)</b><br/><br/><b>VC</b> - Cutting speed [m/min]<br/><b>AP</b> - Cutting depth [mm]<br/><b>FN</b> - Feed per revolution [mm/rev]]]></string>
    <string name="info_11_inch"><![CDATA[<b>Volume Efficiency (Turning - Inch)</b><br/><br/><b>VC</b> - Cutting speed [sfm]<br/><b>AP</b> - Cutting depth [inch]<br/><b>FN</b> - Feed per revolution [in/rev]]]></string>
    <string name="info_12_m"><![CDATA[<b>Zero Point (Centring)</b><br/><br/>Calculates the center of a part between two points (A and B).<br/><br/><b>Formula:</b> (A + B) / 2]]></string>
    <string name="info_12_inch"><![CDATA[<b>Zero Point (Centring - Inch)</b><br/><br/>Calculates the center of a part between two points (A and B).<br/><br/><b>Formula:</b> (A + B) / 2]]></string>
    <string name="info_13_m"><![CDATA[<b>Threading (Turning)</b><br/><br/><b>VC</b> - Cutting speed [m/min]<br/><b>DM</b> - Thread diameter [mm]<br/><b>JT</b> - Thread pitch [mm]<br/><br/><i>Important: In thread turning, feed per revolution (FN) is always equal to thread pitch (P).</i>]]></string>
    <string name="info_13_inch"><![CDATA[<b>Threading (Turning - Inch)</b><br/><br/><b>VC</b> - Cutting speed [sfm]<br/><b>DM</b> - Thread diameter [inch]<br/><b>JT</b> - Thread pitch [TPI]<br/><br/><i>Important: In thread turning, feed per revolution (FN) is always equal to thread pitch (P).</i>]]></string>
    <string name="info_14_m"><![CDATA[<b>Surface Roughness (Ra)</b><br/><br/><b>FN</b> - Feed per revolution [mm/rev]<br/><b>RE</b> - Insert nose radius [mm]<br/><br/>Calculated theoretical surface roughness Ra in µm.]]></string>
    <string name="info_14_inch"><![CDATA[<b>Surface Roughness (Ra - Inch)</b><br/><br/><b>FN</b> - Feed per revolution [in/rev]<br/><b>RE</b> - Insert nose radius [inch]<br/><br/>Calculated theoretical surface roughness Ra in µinch.]]></string>
    <string name="info_15_m"><![CDATA[<b>Taper Turning</b><br/><br/><b>D</b> - Large diameter [mm]<br/><b>d</b> - Small diameter [mm]<br/><b>L</b> - Taper length [mm]<br/><br/>Calculates the cone inclination angle and taper percentage.]]></string>
    <string name="info_15_inch"><![CDATA[<b>Taper Turning (Inch)</b><br/><br/><b>D</b> - Large diameter [inch]<br/><b>d</b> - Small diameter [inch]<br/><b>L</b> - Taper length [inch]<br/><br/>Calculates the cone inclination angle and taper percentage.]]></string>
</resources>